--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@webpack-cli/generators": "^2.1.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.6",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.6.0",
     "prettier": "^2.3.0",
@@ -38,6 +39,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.1",
     "bootstrap-icons": "^1.5.0"
   }
