--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/preset-env": "^7.14.2",
     "@webpack-cli/generators": "^2.1.0",
     "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^9.0.0",
     "css-loader": "^5.2.6",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^5.3.1",
